Fix repository path

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="container">
     <div class="block">
       <article class="message is-dark">
-        <pre class="message-body">helm repo add fabianmp https://github.com/fabianmp/charts
+        <pre class="message-body">helm repo add fabianmp https://fabianmp.github.io/charts
 helm repo update</pre>
       </article>
     </div>
